--- a/aboutme.html
+++ b/aboutme.html
@@ -12,8 +12,8 @@
 
       <table width=100%>
         <tr>
-          <td align=left> <a href="webpage1.html"> Попередня сторінка </a> </td>
-          <td align=right> <a href="webpage3.html"> Наступна сторінка </a> </td>
+          <td align=left> <a href="index.html"> Попередня сторінка </a> </td>
+          <td align=right> <a href="contactme.html"> Наступна сторінка </a> </td>
         </tr>
 
     </body>
