--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <table width=100%>
       <tr>
         <td align=left> Сайт створено 05.10.2021</td>
-        <td align=right> <a href="webpage2.html"> Наступна сторінка </a> </td>
+        <td align=right> <a href="aboutme.html"> Наступна сторінка </a> </td>
       </tr>
 
   </body>
